# three_or_five

./: .flake8  README.md  example.env  pyproject.toml  requirements.txt  settings.py
.github/workflows/: test_style_workflow.yml
app/: __init__.py  error_handlers.py  forms.py  models.py  views.py
app/static/css/: style.css
app/templates/: 404.html  base.html  footer.html  index_denominator.html
