[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["Kapkaev Andrey <kapkaew@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.1"
Flask-WTF = "^1.0.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
